--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -21,6 +21,10 @@
     font-family: 'Courier New', Courier, monospace;
 }
 
+body {
+    background: linear-gradient(179.75deg, #0B1050 -10.75%, #C9004D 114.81%);;
+}
+
 button {
     color: #fff;
     border: none;
@@ -108,5 +112,104 @@ button {
 
     &:hover {
         font-weight: 800;
+    }
+}
+
+.header-menu {
+    display: none;
+    height: 100%;
+    width: 100%;
+
+    z-index: 1000;
+
+    &--item {
+        width: 100vw;
+        margin: 0;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+
+        opacity: 0;
+        transform: translateY(-30px);
+        animation: slideDown 0.6s ease forwards;
+
+        h1 {
+            color: #fff;
+        }
+
+        &:nth-child(1) {
+            animation-delay: 0.1s;
+        }
+        
+        &:nth-child(2) {
+            animation-delay: 0.3s;
+        }
+        
+        &:nth-child(3) {
+            animation-delay: 0.5s;
+        }
+        
+        &:nth-child(4) {
+            animation-delay: 0.7s;
+        }
+    }
+
+    .active {
+        background-color: var(--tertiary-color-shade);
+
+        &::after {
+            content: 'Active';
+            color: #00FF44;
+            margin-top: -10px;
+        }
+    }
+
+    .second {
+        background-color: #FF438A;
+    }
+
+    .third {
+        background-color: #FF74A9;
+    }
+
+    .fourth {
+        background-color: #FFA6C8;
+    }
+
+    
+}
+
+.ascending {
+    .header-menu--item {
+        animation: ascendUp 1s ease forwards;
+
+        &:nth-child(1) {
+            animation-delay: 0.7s;
+        }
+        &:nth-child(2) {
+            animation-delay: 0.5s;
+        }
+        &:nth-child(3) {
+            animation-delay: 0.3s;
+        }
+        &:nth-child(4) {
+            animation-delay: 0.1s;
+        }
+    }
+}
+
+@keyframes slideDown {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes ascendUp {
+    to {
+        transform: translateY(-30px);
+        opacity: 0;
     }
 }
