--- a/components/header.html
+++ b/components/header.html
@@ -1,13 +1,9 @@
-<div class="header-menu--item active" data-page="">
-    <h1> HOME </h1>
+<h1 class="header--name"> Erica Gaffud </h1>
+<div class="header--button">
+    <i class="fa-solid fa-bars"></i>
 </div>
-<div class="header-menu--item second" data-page="work">
-    <h1> WORK </h1>
-</div>
-<div class="header-menu--item third" data-page="about">
-    <h1> ABOUT </h1>
-</div>
-<div class="header-menu--item fourth" data-page="resume">
-    <h1> RESUME </h1>
-</div>
-<script src="../script/header.js"></script>
+<script>
+    $('.header--button').on('click', function(){
+        $('.header-menu').css("display", "grid");
+    })
+</script>
