--- a/styles/global/global.css
+++ b/styles/global/global.css
@@ -101,10 +101,26 @@ button {
   font-weight: 800;
 }
 
+.header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  position: sticky;
+  top: -40vh;
+  z-index: 100;
+  color: #fff;
+}
+.header--name {
+  font-family: "Cookie", cursive;
+  font-weight: 400;
+  font-style: normal;
+}
 .header-menu {
   display: none;
   height: 100%;
   width: 100%;
+  position: absolute;
   z-index: 1000;
 }
 .header-menu--item {
