--- a/styles/home/home.css
+++ b/styles/home/home.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cookie&family=Julius+Sans+One&family=Petit+Formal+Script&display=swap");
 body {
   height: 100vh;
   width: 100vw;
@@ -21,6 +20,11 @@ body {
   padding-top: 40vh;
   padding-bottom: 40vh;
   scroll-behavior: smooth;
+}
+.container .header {
+  position: sticky;
+  top: -40vh;
+  z-index: 100;
 }
 .container img {
   width: 30%;
