--- a/components/header-menu.html
+++ b/components/header-menu.html
@@ -10,4 +10,10 @@
 <div class="header-menu--item fourth" data-page="resume">
     <h1> RESUME </h1>
 </div>
-<script src="../script/header.js"></script>
+<script>
+    $('.header-menu--item').on('click', function(){
+        var page = $(this).data('page');
+        console.log(page);
+        window.location.href = page == '' ? '/index.html' : 'pages/' + page + '.html';
+    });    
+</script>
