--- a/styles/global/global.css
+++ b/styles/global/global.css
@@ -15,11 +15,24 @@
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  font-family: "Courier New", Courier, monospace;
 }
 
 body {
   background: linear-gradient(179.75deg, #0B1050 -10.75%, #C9004D 114.81%);
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+
+.container {
+  width: 80vw;
+  height: 80vh;
+  overflow-y: scroll;
+  scrollbar-width: none;
+  -ms-overflow-style: none;
 }
 
 button {
@@ -184,6 +197,42 @@ button {
   animation-delay: 0.1s;
 }
 
+/* Loader */
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.5);
+  -webkit-backdrop-filter: blur(4px);
+          backdrop-filter: blur(4px);
+  display: none;
+  z-index: 1000;
+  align-items: center;
+  justify-content: center;
+}
+.backdrop--content {
+  background-color: #fff;
+  padding: 1rem;
+  border-radius: 5px;
+  font-size: clamp(0.75rem, 0.536rem + 0.446vw, 1.25rem);
+}
+
+.backdrop .show {
+  display: block;
+  animation: fadeIn 0.3s ease forwards;
+}
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+/****************END LOADER******************/
 @keyframes slideDown {
   to {
     opacity: 1;
