--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -18,11 +18,27 @@
     margin: 0;
     box-sizing: border-box;
 
-    font-family: 'Courier New', Courier, monospace;
+    // font-family: 'Courier New', Courier, monospace;
 }
 
 body {
-    background: linear-gradient(179.75deg, #0B1050 -10.75%, #C9004D 114.81%);;
+    background: linear-gradient(179.75deg, #0B1050 -10.75%, #C9004D 114.81%);
+
+    height: 100vh;
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 0;
+
+}
+
+.container {
+    width: 80vw;
+    height: 80vh;
+    overflow-y: scroll;
+    scrollbar-width: none;
+    -ms-overflow-style: none;
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Archivo+Black&family=Cookie&family=Julius+Sans+One&family=Petit+Formal+Script&display=swap');
@@ -223,6 +239,40 @@ button {
         }
     }
 }
+/* Loader */
+.backdrop {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(0, 0, 0, 0.5);
+    backdrop-filter: blur(4px);
+    display: none;
+    z-index: 1000;
+
+    align-items: center;
+    justify-content: center;
+
+    &--content {
+        background-color: #fff;
+        padding: 1rem;
+        border-radius: 5px;
+        font-size: clamp(0.75rem, 0.536rem + 0.446vw, 1.25rem);
+    }
+}
+
+.backdrop .show {
+    display: block;
+    animation: fadeIn 0.3s ease forwards;
+}
+
+@keyframes fadeIn {
+    from { opacity: 0; }
+    to { opacity: 1; }
+}
+
+/****************END LOADER******************/
 
 @keyframes slideDown {
     to {
