--- a/styles/logo/logo.css
+++ b/styles/logo/logo.css
@@ -8,11 +8,7 @@ body {
 }
 
 .container {
-  width: 80vw;
-  height: 90vh;
-  overflow-y: scroll;
-  scrollbar-width: none;
-  -ms-overflow-style: none;
+  height: 90vh !important;
 }
 .container .header {
   position: sticky;
