--- a/styles/home/home.scss
+++ b/styles/home/home.scss
@@ -14,7 +14,17 @@
     }
 
     img {
-        width: 30%;
+        width: 6rem;
         transition: transform 0.3s ease;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    .container {
+        gap: clamp(13rem, 11.714rem + 2.679vw, 16rem);
+
+        img {
+            width: clamp(8rem, 7.143rem + 1.786vw, 10rem);
+        }
     }
 }
