--- a/styles/logo/logo.scss
+++ b/styles/logo/logo.scss
@@ -5,6 +5,8 @@ body {
     justify-content: center;
     align-items: center;
     margin: 0;
+
+    background: #ffcfcf !important;
 }
 
 .container {
@@ -44,17 +46,7 @@ body {
             gap: 8rem;
 
             img {
-                height: 6rem;
-            }
-        }
-    }
-}
-
-@media only screen and (min-width: 1680px) {
-    .container {
-        .logoDiv {
-            img {
-                height: 8rem;
+                height: clamp(6rem, 3.333rem + 4.167vw, 10rem);
             }
         }
     }
