--- a/styles/global/global.css
+++ b/styles/global/global.css
@@ -137,6 +137,13 @@ button {
 }
 .header--items {
   display: none;
+  cursor: pointer;
+}
+.header--items .active {
+  border-bottom: 2px solid var(--tertiary-color);
+}
+.header--item :hover {
+  transform: scale(0.96);
 }
 
 .header-menu {
@@ -209,6 +216,30 @@ button {
   animation-delay: 0.1s;
 }
 
+.page-header {
+  display: grid;
+  grid-template-columns: 1fr 3fr 1fr;
+  align-items: center;
+  background-color: #f6f6f6;
+  border-radius: 5px;
+  padding: 5px 10px;
+  position: sticky;
+  top: 0;
+  z-index: 1000;
+  box-shadow: 4px 2px 4px #ffa6c8, inset 2px 2px 4px rgba(149, 149, 149, 0.5);
+}
+.page-header #backBtn {
+  cursor: pointer;
+}
+.page-header div {
+  text-align: center;
+}
+.page-header div .page-title {
+  font-weight: 600;
+  color: var(--secondary-color);
+  text-transform: capitalize;
+}
+
 /********************END HEADER*****************/
 /* Loader */
 .backdrop {
@@ -271,5 +302,16 @@ button {
   }
   .header--items .header--item h1 {
     font-size: clamp(1.2rem, 0.667rem + 0.833vw, 2rem);
+  }
+  .page-header {
+    padding: 1rem;
+  }
+}
+@media only screen and (min-width: 1680px) {
+  .page-header {
+    padding: 1.3rem;
+  }
+  .page-header div .page-title {
+    font-size: 1.8rem;
   }
 }/*# sourceMappingURL=global.css.map */
