--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -157,7 +157,19 @@ button {
 
     &--items {
         display: none;
+        cursor: pointer;
+
+        .active {
+            border-bottom: 2px solid var(--tertiary-color);
+        }
     }
+
+    &--item {
+        :hover {
+            transform: scale(0.96);
+        }
+    }
+
 }
 
 .header-menu {
@@ -248,6 +260,34 @@ button {
     }
 }
 
+.page-header {
+    display: grid;
+    grid-template-columns: 1fr 3fr 1fr;
+    align-items: center;
+    background-color: #f6f6f6;
+    border-radius: 5px;
+    padding: 5px 10px;
+
+    position: sticky;
+    top: 0;
+    z-index: 1000;
+    box-shadow: 4px 2px 4px #ffa6c8, inset 2px 2px 4px rgb(149 149 149 / 50%);
+
+    #backBtn {
+        cursor: pointer;
+    }
+
+    div {
+        text-align: center;
+
+        .page-title {
+            font-weight: 600;
+            color: var(--secondary-color);
+            text-transform: capitalize;
+        }
+    }
+}
+
 /********************END HEADER*****************/
 
 /* Loader */
@@ -317,6 +357,22 @@ button {
                 h1 {
                     font-size: clamp(1.2rem, 0.667rem + 0.833vw, 2rem);
                 }
+            }
+        }
+    }
+
+    .page-header {
+        padding: 1rem;
+    }
+}
+
+@media only screen and (min-width: 1680px) {
+    .page-header {
+        padding: 1.3rem;
+
+        div {
+            .page-title {
+                font-size: 1.8rem;
             }
         }
     }
