ams content and modification

--- a/styles/ams/ams.scss
+++ b/styles/ams/ams.scss
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Dokdo&display=swap');
+body {
+    background: #ffcfcf !important;
+}
 
 .container {
     overflow: hidden !important;
@@ -11,9 +14,18 @@
     justify-content: center;
     text-align: center;
     height: 100%;
-    color: #fff;
-    max-width: 45rem;
+    color: var(--primary-color-tint);
+    max-width: 70rem;
     margin: auto;
+
+    h6 {
+        font-weight: 600;
+
+        span {
+            font-weight: bolder;
+            color: var(--tertiary-color-shade);
+        }
+    }
 
     .title {
         text-decoration: underline;
@@ -28,7 +40,7 @@
     .ams-btn {
         text-decoration: none;
         color: #fff;
-        background-color: var(--tertiary-color);
+        background-color: var(--primary-color);
         border: none;
         border-radius: 10px;
         padding: 5px 30px;
@@ -39,7 +51,7 @@
 
 .tooltip {
     position: absolute;
-    background-color: #333;
+    background-color: var(--primary-color);
     color: #fff;
     padding: 5px 10px;
     border-radius: 4px;
