--- a/styles/food-galore/food-galore.css
+++ b/styles/food-galore/food-galore.css
@@ -1,3 +1,7 @@
+body {
+  background: #ffcfcf !important;
+}
+
 .container-image-link {
   display: flex;
   align-items: center;
@@ -18,7 +22,7 @@
   display: none;
 }
 .container-instruction {
-  color: #f1f1f1;
+  color: var(--primary-color-tint);
   text-align: center;
 }
 .container-instruction h4 {
@@ -33,6 +37,9 @@
 }
 
 @media only screen and (min-width: 768px) {
+  .container-image-link {
+    padding: 1rem;
+  }
   .container-image-link__mobile {
     display: none;
   }
@@ -41,6 +48,9 @@
   }
 }
 @media only screen and (min-width: 1024px) {
+  .container-image-link {
+    padding: 2rem;
+  }
   .container-image-link__tablet {
     display: none;
   }
