--- a/styles/food-galore/food-galore.scss
+++ b/styles/food-galore/food-galore.scss
@@ -1,3 +1,7 @@
+body {
+    background: #ffcfcf !important;
+}
+
 .container {
     &-image-link {
         display: flex;
@@ -25,7 +29,7 @@
     }
 
     &-instruction {
-        color: #f1f1f1;
+        color: var(--primary-color-tint);
         text-align: center;
 
         h4 {
@@ -46,6 +50,7 @@
 @media only screen and (min-width: 768px) {
     .container {
         &-image-link {
+            padding: 1rem;
             &__mobile {
                 display: none;
             }
@@ -60,6 +65,7 @@
 @media only screen and (min-width: 1024px) {
     .container {
         &-image-link {
+            padding: 2rem;
             &__tablet {
                 display: none;
             }
