--- a/styles/global/global.scss
+++ b/styles/global/global.scss
@@ -288,6 +288,19 @@ button {
     }
 }
 
+@keyframes slideDown {
+    to {
+        opacity: 1;
+        transform: translateY(0);
+    }
+}
+
+@keyframes ascendUp {
+    to {
+        transform: translateY(-30px);
+        opacity: 0;
+    }
+}
 /********************END HEADER*****************/
 
 /* Loader */
@@ -325,17 +338,71 @@ button {
 
 /****************END LOADER******************/
 
-@keyframes slideDown {
-    to {
-        opacity: 1;
-        transform: translateY(0);
+/***************FIGMA IMAGE CONTAINER*************/
+.container {
+    &-image-link {
+        display: flex;
+        align-items: center;
+        margin-block: 2rem;
+        padding: 10px;
+        background-color: #f6f6f6;
+        text-align: center;
+        overflow: hidden;
+
+        img {
+            width: 100%;
+            cursor: pointer;
+        }
+
+        &__tablet {
+            display: none;
+        }
+
+        &__desktop {
+            display: none;
+        }
+    }
+
+    &-instruction {
+        color: var(--primary-color-tint);
+        text-align: center;
+        margin-top: 2rem;
+
+        h4 {
+            font-weight: 700;
+
+            span {
+                text-decoration: underline;
+                font-weight: 900;
+                cursor: pointer;
+
+                &:hover {
+                    color: var(--tertiary-color-tint);
+                    text-decoration: none;
+                }
+            }
+        }
+
+        h6 {
+            font-style: italic;
+        }
     }
 }
 
-@keyframes ascendUp {
-    to {
-        transform: translateY(-30px);
-        opacity: 0;
+/***************END FIGMA CONTAINER***************/
+
+@media only screen and (min-width: 768px) {
+    .container {
+        &-image-link {
+            padding: 1rem;
+            &__mobile {
+                display: none;
+            }
+
+            &__tablet {
+                display: block;
+            }
+        }
     }
 }
 
@@ -364,6 +431,19 @@ button {
     .page-header {
         padding: 1rem;
     }
+
+    .container {
+        &-image-link {
+            padding: 2rem;
+            &__tablet {
+                display: none;
+            }
+
+            &__desktop {
+                display: block;
+            }
+        }
+    }
 }
 
 @media only screen and (min-width: 1680px) {
@@ -376,4 +456,16 @@ button {
             }
         }
     }
+
+    .container {
+        &-instruction {
+            h4 {
+                font-size: 1.5rem;
+            }
+
+            h6 {
+                font-size: 1.3rem;
+            }
+        }
+    }   
 }
