work page plus some minor styles

--- a/components/header-menu.html
+++ b/components/header-menu.html
@@ -14,6 +14,6 @@
     $('.header-menu--item').on('click', function(){
         var page = $(this).data('page');
         console.log(page);
-        window.location.href = page == '' ? '/index.html' : 'pages/' + page + '.html';
+        window.location.href = page == '' ? '/index.html' : '/pages/' + page + '.html';
     });    
 </script>
