--- a/components/header.html
+++ b/components/header.html
@@ -24,6 +24,6 @@
     $('.header--item').on('click', function(){
         var page = $(this).data('page');
         console.log(page);
-        window.location.href = page == '' ? '/index.html' : 'pages/' + page + '.html';
+        window.location.href = page == '' ? '/index.html' : '/pages/' + page + '.html';
     });  
 </script>
