--- a/styles/home/home.css
+++ b/styles/home/home.css
@@ -16,6 +16,7 @@
   width: 6rem;
   transition: transform 0.3s ease;
   cursor: pointer;
+  opacity: 0.7;
 }
 
 @media only screen and (min-width: 768px) {
