about page content

--- a/styles/about/about.scss
+++ b/styles/about/about.scss
@@ -45,7 +45,7 @@
             }
 
             div {
-                background-color: #fff;
+                background-color: #f7f7f7;
                 margin-block: 10px;
                 padding: 10px;
                 color: #000;
