--- a/styles/about/about.css
+++ b/styles/about/about.css
@@ -40,7 +40,7 @@
   font-size: clamp(0.7rem, 0.616rem + 0.486vw, 1.2rem);
 }
 .container-about--info div div {
-  background-color: #fff;
+  background-color: #f7f7f7;
   margin-block: 10px;
   padding: 10px;
   color: #000;
