path segment header

--- a/components/header-menu.html
+++ b/components/header-menu.html
@@ -12,7 +12,8 @@
 </div>
 <script>
     $(document).ready(function () {
-        var currentPage = window.location.pathname.split('/').pop().replace('.html', '');
+        var pathSegments = window.location.pathname.split('/');
+        var currentPage = pathSegments[pathSegments.length - 1].replace('.html', '');
         console.log("CURRENT PAGE: ", currentPage);
         $('.header-menu--item').each(function () {
             var page = $(this).data('page');
