header menu link

--- a/components/header-menu.html
+++ b/components/header-menu.html
@@ -13,12 +13,14 @@
 <script>
     $(document).ready(function () {
         var pathSegments = window.location.pathname.split('/');
-        var currentPage = pathSegments[pathSegments.length - 1].replace('.html', '');
+        var currentPage = pathSegments.pop().replace('.html', '');
+
         console.log("CURRENT PAGE: ", currentPage);
+
         $('.header-menu--item').each(function () {
             var page = $(this).data('page');
 
-            if (currentPage === page) {
+            if ((currentPage === '' && page === '') || currentPage === page) {
                 $(this).addClass('active');
             } else {
                 $(this).removeClass('active');
