--- a/components/header.html
+++ b/components/header.html
@@ -23,11 +23,13 @@
 
     $(document).ready(function () {
         var pathSegments = window.location.pathname.split('/');
+        var portfolioWord = pathSegments[1] || '';
         var currentPage = pathSegments.pop().replace('.html', '');
         
+        console.log("PORTFOLIO: ", portfolioWord);
         console.log("CURRENT PAGE: ", currentPage);
 
-        $('.header--item').each(function () {
+        $('.header-menu--item').each(function () {
             var page = $(this).data('page');
 
             if ((currentPage === '' && page === '') || currentPage === page) {
@@ -38,8 +40,12 @@
         });
     });
 
-    $('.header--item').on('click', function() {
+    $('.header-menu--item').on('click', function() {
         var page = $(this).data('page');
-        window.location.href = page == 'index' ? '/index.html' : '/pages/' + page + '.html';
-    });  
+        var pathSegments = window.location.pathname.split('/');
+        var portfolioWord = pathSegments[1] || '';
+        var portfolio = portfolioWord == 'Portfolio' ? '/Portfolio' : '';
+
+        window.location.href = page == 'index' ? '/index.html' : portfolio + '/pages/' + page + '.html';
+    });
 </script>
