--- a/components/header.html
+++ b/components/header.html
@@ -29,7 +29,7 @@
         console.log("PORTFOLIO: ", portfolioWord);
         console.log("CURRENT PAGE: ", currentPage);
 
-        $('.header-menu--item').each(function () {
+        $('.header--item').each(function () {
             var page = $(this).data('page');
 
             if ((currentPage === '' && page === '') || currentPage === page) {
@@ -40,12 +40,12 @@
         });
     });
 
-    $('.header-menu--item').on('click', function() {
+    $('.header--item').on('click', function() {
         var page = $(this).data('page');
         var pathSegments = window.location.pathname.split('/');
         var portfolioWord = pathSegments[1] || '';
         var portfolio = portfolioWord == 'Portfolio' ? '/Portfolio' : '';
 
-        window.location.href = page == 'index' ? '/index.html' : portfolio + '/pages/' + page + '.html';
+        window.location.href = page == 'index' ? portfolio + '/index.html' : portfolio + '/pages/' + page + '.html';
     });
 </script>
