--- a/components/header.html
+++ b/components/header.html
@@ -22,12 +22,14 @@
     });
 
     $(document).ready(function () {
-        var pathSegments = window.location.pathname.split('/');
-        var portfolioWord = pathSegments[1] || '';
-        var currentPage = pathSegments.pop().replace('.html', '');
+        var pathName = window.location.pathname.split('/');
+        var currentPage = pathName.pop().replace('.html', '');
+
+        var title = pathName.length == 1 ? '' : pathName[1];
+        var url = title == 'Portfolio' ? '/Portfolio' : '';
         
-        console.log("PORTFOLIO: ", portfolioWord);
-        console.log("CURRENT PAGE: ", currentPage);
+        console.log("TITLE: ", url);
+        
 
         $('.header--item').each(function () {
             var page = $(this).data('page');
@@ -38,14 +40,11 @@
                 $(this).removeClass('active');
             }
         });
-    });
 
-    $('.header--item').on('click', function() {
-        var page = $(this).data('page');
-        var pathSegments = window.location.pathname.split('/');
-        var portfolioWord = pathSegments[1] || '';
-        var portfolio = portfolioWord == 'Portfolio' ? '/Portfolio' : '';
+        $('.header--item').on('click', function() {
+            var page = $(this).data('page');
 
-        window.location.href = page == 'index' ? portfolio + '/index.html' : portfolio + '/pages/' + page + '.html';
+            window.location.href = page == 'index' ? url + '/index.html' : url + '/pages/' + page + '.html';
+        });
     });
 </script>
